fix(sunburst-chart): Fix tooltip flicker on click

--- a/apps/dev/src/sunburst-chart/sunburst-chart-demo.component.scss
+++ b/apps/dev/src/sunburst-chart/sunburst-chart-demo.component.scss
@@ -1,3 +1,7 @@
 :host {
   display: block;
 }
+
+dt-sunburst-chart {
+  max-width: 800px;
+}
